--- a/backend/package.json
+++ b/backend/package.json
@@ -7,18 +7,18 @@
       "@types/cors": "^2.8.17",
       "@types/express": "^4.17.21",
       "@types/node": "^16.18.97",
+      "prisma": "^5.14.0",
       "ts-node": "^10.9.1",
       "typescript": "^4.5.2"
    },
    "dependencies": {
+      "@prisma/client": "^5.14.0",
       "cors": "^2.8.5",
       "express": "^4.19.2",
       "pg": "^8.4.0",
-      "reflect-metadata": "^0.1.13",
-      "typeorm": "0.3.20"
+      "reflect-metadata": "^0.1.13"
    },
    "scripts": {
-      "start": "nodemon src/index.ts",
-      "typeorm": "typeorm-ts-node-commonjs"
+      "start": "nodemon src/index.ts"
    }
 }
