feat: adding cloudinary and file upload

--- a/backend/.env
+++ b/backend/.env
@@ -6,3 +6,9 @@
 
 # DATABASE_URL="postgresql://<user>:<password>@<host>:<port>/<db>?schema=public"
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/b54circle?schema=public"
+JWT_SECRET="hbPtWzBXYoRvakh"
+
+# CLOUDINARY
+CLOUDINARY_CLOUD_NAME=dbg0ryp8s
+CLOUDINARY_API_KEY=298971193175183
+CLOUDINARY_API_SECRET=kpsg-pcHuU7C2-P5LCYaLk0H_lY
