--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,11 @@
    "description": "Awesome project developed with TypeORM.",
    "type": "commonjs",
    "devDependencies": {
+      "@types/bcrypt": "^5.0.2",
       "@types/cors": "^2.8.17",
       "@types/express": "^4.17.21",
+      "@types/jsonwebtoken": "^9.0.6",
+      "@types/multer": "^1.4.11",
       "@types/node": "^16.18.97",
       "prisma": "^5.14.0",
       "ts-node": "^10.9.1",
@@ -13,8 +16,12 @@
    },
    "dependencies": {
       "@prisma/client": "^5.14.0",
+      "cloudinary": "^2.2.0",
       "cors": "^2.8.5",
+      "dotenv": "^16.4.5",
       "express": "^4.19.2",
+      "jsonwebtoken": "^9.0.2",
+      "multer": "^1.4.5-lts.1",
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.13"
    },
