--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,11 @@
     "@emotion/styled": "^11.11.5",
     "@hookform/resolvers": "^3.5.0",
     "@reduxjs/toolkit": "^2.2.5",
+    "@tanstack/react-query": "^5.40.1",
+    "@tanstack/react-query-devtools": "^5.40.1",
     "axios": "^1.7.2",
     "framer-motion": "^11.2.6",
+    "lucide-react": "^0.383.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
@@ -25,6 +28,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.35.6",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
