--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
       "cors": "^2.8.5",
       "dotenv": "^16.4.5",
       "express": "^4.19.2",
+      "joi": "^17.13.1",
       "jsonwebtoken": "^9.0.2",
       "multer": "^1.4.5-lts.1",
       "pg": "^8.4.0",
@@ -27,7 +28,7 @@
    },
    "scripts": {
       "start": "node dist/index.js",
-      "dev" : "nodemon src/index.ts",
-      "build" : "tsc && prisma generate"
+      "dev": "nodemon src/index.ts",
+      "build": "tsc && prisma generate"
    }
 }
