--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
    },
    "dependencies": {
       "@prisma/client": "^5.14.0",
+      "bcrypt": "^5.1.1",
       "cloudinary": "^2.2.0",
       "cors": "^2.8.5",
       "dotenv": "^16.4.5",
