--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
       "@types/jsonwebtoken": "^9.0.6",
       "@types/multer": "^1.4.11",
       "@types/node": "^16.18.97",
+      "@types/swagger-ui-express": "^4.1.6",
       "prisma": "^5.14.0",
       "ts-node": "^10.9.1",
       "typescript": "^4.5.2"
@@ -25,11 +26,14 @@
       "jsonwebtoken": "^9.0.2",
       "multer": "^1.4.5-lts.1",
       "pg": "^8.4.0",
-      "reflect-metadata": "^0.1.13"
+      "reflect-metadata": "^0.1.13",
+      "swagger-autogen": "^2.23.7",
+      "swagger-ui-express": "^5.0.1"
    },
    "scripts": {
       "start": "node dist/index.js",
       "dev": "nodemon src/index.ts",
-      "build": "tsc && prisma generate"
+      "build": "tsc && prisma generate",
+      "swagger": "node swagger/swagger.js"
    }
 }
