--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,7 @@
    "version": "0.0.1",
    "description": "Awesome project developed with TypeORM.",
    "type": "commonjs",
+   "main": "dist/index.js",
    "devDependencies": {
       "@types/bcrypt": "^5.0.2",
       "@types/cors": "^2.8.17",
