--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
       "jsonwebtoken": "^9.0.2",
       "multer": "^1.4.5-lts.1",
       "pg": "^8.4.0",
+      "redis": "^4.6.14",
       "reflect-metadata": "^0.1.13",
       "swagger-autogen": "^2.23.7",
       "swagger-ui-express": "^5.0.1"
