--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
       "@types/jsonwebtoken": "^9.0.6",
       "@types/multer": "^1.4.11",
       "@types/node": "^16.18.97",
+      "@types/nodemailer": "^6.4.15",
       "@types/swagger-ui-express": "^4.1.6",
       "prisma": "^5.14.0",
       "ts-node": "^10.9.1",
@@ -22,10 +23,13 @@
       "cors": "^2.8.5",
       "dotenv": "^16.4.5",
       "express": "^4.19.2",
+      "express-rate-limit": "^7.3.1",
       "joi": "^17.13.1",
       "jsonwebtoken": "^9.0.2",
       "multer": "^1.4.5-lts.1",
+      "nodemailer": "^6.9.13",
       "pg": "^8.4.0",
+      "rate-limit-redis": "^4.2.0",
       "redis": "^4.6.14",
       "reflect-metadata": "^0.1.13",
       "swagger-autogen": "^2.23.7",
