--- a/backend/package.json
+++ b/backend/package.json
@@ -1,44 +1,51 @@
 {
-   "name": "backend",
-   "version": "0.0.1",
-   "description": "Awesome project developed with TypeORM.",
-   "type": "commonjs",
-   "devDependencies": {
-      "@types/bcrypt": "^5.0.2",
-      "@types/cors": "^2.8.17",
-      "@types/express": "^4.17.21",
-      "@types/jsonwebtoken": "^9.0.6",
-      "@types/multer": "^1.4.11",
-      "@types/node": "^16.18.97",
-      "@types/nodemailer": "^6.4.15",
-      "@types/swagger-ui-express": "^4.1.6",
-      "prisma": "^5.14.0",
-      "ts-node": "^10.9.1",
-      "typescript": "^4.5.2"
-   },
-   "dependencies": {
-      "@prisma/client": "^5.14.0",
-      "bcrypt": "^5.1.1",
-      "cloudinary": "^2.2.0",
-      "cors": "^2.8.5",
-      "dotenv": "^16.4.5",
-      "express": "^4.19.2",
-      "express-rate-limit": "^7.3.1",
-      "joi": "^17.13.1",
-      "jsonwebtoken": "^9.0.2",
-      "multer": "^1.4.5-lts.1",
-      "nodemailer": "^6.9.13",
-      "pg": "^8.4.0",
-      "rate-limit-redis": "^4.2.0",
-      "redis": "^4.6.14",
-      "reflect-metadata": "^0.1.13",
-      "swagger-autogen": "^2.23.7",
-      "swagger-ui-express": "^5.0.1"
-   },
-   "scripts": {
-      "start": "node dist/src/index.js",
-      "dev": "nodemon src/index.ts",
-      "build": "tsc && prisma generate",
-      "swagger": "node swagger/swagger.js"
-   }
+  "name": "backend",
+  "version": "0.0.1",
+  "description": "Awesome project developed with TypeORM.",
+  "type": "commonjs",
+  "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/multer": "^1.4.11",
+    "@types/node": "^16.18.97",
+    "@types/nodemailer": "^6.4.15",
+    "@types/supertest": "^6.0.2",
+    "@types/swagger-ui-express": "^4.1.6",
+    "jest": "^29.7.0",
+    "prisma": "^5.14.0",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.1.4",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.5.2"
+  },
+  "dependencies": {
+    "@prisma/client": "^5.14.0",
+    "bcrypt": "^5.1.1",
+    "cloudinary": "^2.2.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "express-rate-limit": "^7.3.1",
+    "joi": "^17.13.1",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.13",
+    "pg": "^8.4.0",
+    "rate-limit-redis": "^4.2.0",
+    "redis": "^4.6.14",
+    "reflect-metadata": "^0.1.13",
+    "swagger-autogen": "^2.23.7",
+    "swagger-ui-express": "^5.0.1"
+  },
+  "scripts": {
+    "start": "node dist/src/index.js",
+    "dev": "nodemon src/index.ts",
+    "build": "tsc && prisma generate",
+    "swagger": "node swagger/swagger.js",
+    "test": "jest --coverage"
+  }
 }
