chore(backend): add some new .env sample

--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -12,3 +12,10 @@ JWT_SECRET=""
 CLOUDINARY_CLOUD_NAME=
 CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
+
+# REDIS
+REDIS_URL=
+
+# NODEMAILER
+EMAIL_USER=
+EMAIL_PASSWORD=
