--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,8 +24,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
+    "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
+    "styled-components": "^6.1.11",
     "use-debounce": "^10.0.1",
     "zod": "^3.23.8"
   },
